[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "langgraph_utils"
version = "0.0.4"
description = "Utilities for Langchain and langgraph"
authors = [{name = "Kamal", email = "skamalj@github.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langchain-core"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "isort"
]

[tool.hatch.build.targets.wheel]
packages = ["src/langgraph_utils"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
multi_line_output = 3